catkin_ws/logs/px4_offboard/build.make.032.log.stderr
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/px4_offboard/src/SLAM.cpp:2:0:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/px4_offboard/src/CtrlPx4.cpp: In constructor ‘CtrlPx4::CtrlPx4()’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/px4_offboard/src/CtrlPx4.cpp:36:51: error: ‘aprilCallback’ is not a member of ‘CtrlPx4’
   april_sub_ = nh_.subscribe("april/cmd_mav",100,&CtrlPx4::aprilCallback,this);  
                                                   ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/px4_offboard/src/CtrlPx4.cpp: At global scope:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/px4_offboard/src/CtrlPx4.cpp:118:63: error: no ‘void CtrlPx4::aprilCallback(px4_offboard::JoyCommand)’ member function declared in class ‘CtrlPx4’
 void CtrlPx4::aprilCallback(const px4_offboard::JoyCommand joy)
                                                               ^
make[2]: *** [CMakeFiles/SLAM.dir/src/SLAM.cpp.o] Error 1
make[1]: *** [CMakeFiles/SLAM.dir/all] Error 2
make: *** [all] Error 2
